--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^1.0.0",
 		"@sveltejs/kit": "^1.0.0",
-		"@sveltejs/package": "^1.0.0",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
 		"svelte": "^3.54.0",
@@ -27,6 +26,7 @@
 		"@sveltejs/adapter-static": "^1.0.4",
 		"autoprefixer": "^10.4.13",
 		"postcss-load-config": "^4.0.1",
-		"postcss-nesting": "^10.2.0"
+		"postcss-nesting": "^10.2.0",
+		"svelte-preprocess": "^5.0.1"
 	}
 }
