--- a/package.json
+++ b/package.json
@@ -11,22 +11,20 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^1.0.0",
-		"@sveltejs/kit": "^1.0.0",
-		"prettier": "^2.8.0",
-		"prettier-plugin-svelte": "^2.8.1",
-		"svelte": "^3.54.0",
-		"svelte-check": "^3.0.1",
-		"typescript": "^4.9.3",
-		"vite": "^4.0.0"
+		"@sveltejs/adapter-auto": "^1.0.2",
+		"@sveltejs/kit": "^1.3.10",
+		"prettier": "^2.8.3",
+		"prettier-plugin-svelte": "^2.9.0",
+		"svelte": "^3.55.1",
+		"svelte-check": "^3.0.3",
+		"typescript": "^4.9.5",
+		"vite": "^4.1.1"
 	},
 	"type": "module",
 	"dependencies": {
-		"@kazkadien/svelte": "^0.18.0",
-		"@sveltejs/adapter-static": "^1.0.4",
+		"@kazkadien/svelte": "^0.19.0",
+		"@sveltejs/adapter-static": "^1.0.6",
 		"autoprefixer": "^10.4.13",
-		"postcss-load-config": "^4.0.1",
-		"postcss-nesting": "^10.2.0",
-		"svelte-preprocess": "^5.0.1"
+		"postcss-load-config": "^4.0.1"
 	}
 }
