--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^1.0.2",
-		"@sveltejs/kit": "^1.3.10",
-		"prettier": "^2.8.3",
+		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/kit": "^1.5.2",
+		"prettier": "^2.8.4",
 		"prettier-plugin-svelte": "^2.9.0",
 		"svelte": "^3.55.1",
 		"svelte-check": "^3.0.3",
@@ -22,9 +22,8 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@kazkadien/svelte": "^0.19.0",
-		"@sveltejs/adapter-static": "^1.0.6",
-		"autoprefixer": "^10.4.13",
-		"postcss-load-config": "^4.0.1"
+		"@kazkadien/svelte": "^0.19.1",
+		"@sveltejs/adapter-static": "^2.0.0",
+		"autoprefixer": "^10.4.13"
 	}
 }
