--- a/package.json
+++ b/package.json
@@ -15,16 +15,18 @@
 		"@sveltejs/kit": "^1.20.4",
 		"prettier": "^2.8.8",
 		"prettier-plugin-svelte": "^2.10.1",
-		"svelte": "^3.59.1",
-		"svelte-check": "^3.4.3",
+		"svelte": "^4.0.0",
+		"svelte-check": "^3.4.4",
 		"tslib": "^2.5.3",
 		"typescript": "^5.1.3",
 		"vite": "^4.3.9"
 	},
 	"type": "module",
 	"dependencies": {
-		"@kazkadien/svelte": "^0.30.0",
+		"@kazkadien/svelte": "^0.31.0",
 		"@sveltejs/adapter-static": "^2.0.2",
-		"idb": "^7.1.1"
+		"autoprefixer": "^10.4.14",
+		"idb": "^7.1.1",
+		"postcss-nesting": "^11.3.0"
 	}
 }
