--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@kazkadien/svelte": "^0.31.0",
 		"@sveltejs/adapter-static": "^2.0.3",
 		"autoprefixer": "^10.4.15",
+		"howler": "^2.2.3",
 		"idb": "^7.1.1",
 		"postcss-nesting": "^12.0.1",
 		"prettier": "2.8.8"
