--- a/package.json
+++ b/package.json
@@ -11,19 +11,20 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^2.1.1",
-		"@sveltejs/kit": "^1.30.4",
+		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"prettier-plugin-svelte": "^3.2.1",
 		"svelte": "^4.2.11",
 		"svelte-check": "^3.6.4",
 		"tslib": "^2.6.2",
 		"typescript": "^5.3.3",
-		"vite": "^4.5.2"
+		"vite": "^5.0.0"
 	},
 	"type": "module",
 	"dependencies": {
 		"@kazkadien/svelte": "^0.32.0",
-		"@sveltejs/adapter-static": "^2.0.3",
+		"@sveltejs/adapter-static": "^3.0.0",
 		"autoprefixer": "^10.4.17",
 		"howler": "^2.2.4",
 		"idb": "^7.1.1",
